Fix integration test [PatienceManagement]